fixed: spacing section

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3960,6 +3960,10 @@ input:checked + .toggle-bg {
     font-size: 0.75rem;
     line-height: 1rem;
 }
+.text-key {
+    font-size: 1px;
+    line-height: 1rem;
+}
 .font-black {
     font-weight: 900;
 }
@@ -6641,6 +6645,10 @@ input:checked + .toggle-bg {
         -webkit-margin-start: auto;
         margin-inline-start: auto;
     }
+    .sm\:marg-sm {
+        margin-top: 45px;
+        margin-bottom: 20px;
+    }
     .sm\:mt-0 {
         margin-top: 0;
     }
@@ -6846,8 +6854,8 @@ input:checked + .toggle-bg {
         font-size: 20px;
         line-height: 1.5rem;
     }
-    .lg\:text-sm43 {
-        font-size: 10px;
+    .sm\:text-mobile {
+        font-size: 1px;
         line-height: 1.5rem;
     }
     .sm\:ring-8 {
@@ -7269,6 +7277,14 @@ input:checked + .toggle-bg {
     }
 }
 @media (min-width: 1024px) {
+    .lg\:marg-lg {
+        margin-top: 45px;
+        margin-bottom: 20px;
+    }
+    .lg\:text-lglg {
+        font-size: 30px;
+        line-height: 1.5rem;
+    }
     .lg\:static {
         position: static;
     }
